base/ingress/ingressroute-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudmart-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tulunad.click`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api-gateway
          port: 3000

    - match: Host(`tulunad.click`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          port: 3000
  tls:
    secretName: tulunad-click-tls
